--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,113 @@ body {
   margin: 0 auto -60px;
   padding: 0 0 60px;
 }
+
+#footer {
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
+#wrap > .container {
+  padding: 60px 15px 0;
+}
+
+.container .credit {
+  margin: 20px 0;
+}
+
+#footer > .container {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+code {
+  font-size: 80%;
+}
+
+a.navbar-brand {
+  margin-top: 10px;
+  margin-right: 15px;
+  margin-left: 5px;
+  display: inline-block;
+  height: 33px;
+  width: 183px;
+  background: url('../images/mizzourec-logo.png') no-repeat 0 0;
+}
+
+a.navbar-brand:hover {
+  background-position: 0 -34px;
+}
+
+@media screen and (max-width: 250px) {
+
+  a.navbar-brand {
+    margin-top: 10px;
+    margin-right: 15px;
+    margin-left: 5px;
+    display: inline-block;
+    height: 33px;
+    width: 150px;
+    background: url('../images/mizzourec-logo.png') no-repeat 0 0;
+  }
+}
+
+#content {
+  color: #fff;
+}
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+
+.form-signin .checkbox {
+  font-weight: normal;
+}
+
+.form-signin .form-control {
+  position: relative;
+  font-size: 16px;
+  height: auto;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+
+.form-signin input[type="text"] {
+  margin-bottom: -1px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.account-wall {
+  margin-top: 20px;
+  padding: 40px 0px 20px 0px;
+  background-color: #f7f7f7;
+  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.login-title {
+  color: #fff;
+  font-size: 28px;
+  font-weight: 400;
+  display: block;
+}
+
+.btn-golden {
+  color: #ffffff;
+  background-color: #d79b13;
+  border-color: #ccc;
+}
